[package]
name = "btle-adv-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
#![feature(unsafe_extern_blocks)]
btleplug = {version="0.11", features=["serde"]}

#serde_cr = { package = "serde", version = "1.0.210", features = ["derive"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

serde_yaml = "0.9"
tokio = { version = "1.42", features = ["full"] }

time = "0.3.36"
clap = { version="4.5.23" , features=["derive"]}
pretty_env_logger = { version="0.5"}
log = "0.4"

futures = "0.3.31"
uuid = { version = "1.11.0" , features= ["serde"]}
rusqlite = "0.32"

chrono = { version = "0.4" , features = ["serde"]}
nix = {  version = "0.29", features = ["signal"]}

thiserror = "2"
bluez-async = { version = "0.8.0"}

[[bin]]
name = "btle-adv-logger"
path = "src/main.rs"
